Adaptado para mobile

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
     </div>
 
     <canvas width="600" height="600"></canvas>
+    <!-- Botões de navegação para a versão mobile -->
+
+    <div class="mobile-controls">
+        <div class="d-pad">
+            <button class="control-button up" data-direction="up">&#9650;</button>
+            <div class="horizontal-buttons">
+                <button class="control-button left" data-direction="left">&#9664;</button>
+                <button class="control-button right" data-direction="right">&#9654;</button>
+            </div>
+            <button class="control-button down" data-direction="down">&#9660;</button>
+        </div>
+    </div>
+
     <script src="./js/script.js"></script>
 </body>
 </html>
